# NigelCPP

./: .gitignore  CMakeLists.txt  README.md
GigaLearnCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ActionParsers/: DefaultAction.cpp  DefaultAction.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ObsBuilders/: ObsBuilder.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Rewards/: CommonRewards.h
GigaLearnCPP/src/public/GigaLearnCPP/: Learner.cpp
RocketSimVis/: run_bot.py
RocketSimVis/python_checkpoint/: PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
bot/: AdvancedObsPadderGGL.cpp  AdvancedObsPadderGGL.h  CMakeLists.txt  CustomObs.cpp  CustomObs.h  IPC.hpp  LookupAction.cpp  LookupAction.h  NigelSDK.def  OutWrapper.h  TorchPolicy.cpp  TorchPolicy.h  build.bat  dllmain.cpp  injector.cpp  nigel_config.cfg  pch.hpp
bot/Blacklist/: Blacklist.cpp  Blacklist.hpp
bot/Bot/: Bot.cpp  Bot.hpp  NigelConfig.hpp  NigelSnap.hpp
bot/Components/: Component.cpp  Component.hpp  Includes.hpp
bot/Components/Components/: Console.cpp  Console.hpp  Core.cpp  Core.hpp  Events.cpp  Events.hpp  GUI.cpp  GUI.hpp  GameState.cpp  GameState.hpp  Instances.cpp  Instances.hpp  Main.cpp  Main.hpp  Manager.cpp  Manager.hpp
bot/DLL/: IPC.hpp
bot/ImGui/: imgui.cpp
bot/Modules/: Includes.hpp  Module.cpp  Module.hpp
bot/Modules/Mods/: Drawing.cpp  Drawing.hpp  NigelUI.cpp  NigelUI.hpp
bot/ObsBuilders/: AdvancedObs.cpp  AdvancedObs.h  DefaultObs.cpp  DefaultObs.h  DefaultObsPadded.cpp  DefaultObsPadded.h  ObsBuilder.h
bot/RLSDK/: GameDefines.cpp  GameDefines.hpp  RawLayoutDump.txt  SdkHeaders.hpp
bot/RLSDK/SDK_HEADERS/: AkAudio_classes.cpp  AkAudio_classes.hpp  AkAudio_parameters.hpp  AkAudio_structs.hpp  Core_classes.cpp  Core_classes.hpp  Core_parameters.hpp  Core_structs.hpp  Engine_classes.hpp  Engine_parameters.hpp  Engine_structs.hpp  GFxUI_classes.cpp  GFxUI_classes.hpp  GFxUI_parameters.hpp  GFxUI_structs.hpp  IpDrv_classes.cpp  IpDrv_classes.hpp  IpDrv_parameters.hpp  IpDrv_structs.hpp  OnlineSubsystemEOS_classes.cpp  OnlineSubsystemEOS_classes.hpp  OnlineSubsystemEOS_parameters.hpp  OnlineSubsystemEOS_structs.hpp  ProjectX_classes.cpp  ProjectX_classes.hpp  ProjectX_parameters.hpp  ProjectX_structs.hpp  TAGame_classes.hpp  TAGame_structs.hpp  WinDrv_classes.cpp  WinDrv_classes.hpp  WinDrv_parameters.hpp  WinDrv_structs.hpp  XAudio2_classes.cpp  XAudio2_classes.hpp  XAudio2_parameters.hpp  XAudio2_structs.hpp
checkpoints/48079872/: RUNNING_STATS.json
checkpoints/51124480/: RUNNING_STATS.json
checkpoints/53120256/: RUNNING_STATS.json
checkpoints/55117312/: RUNNING_STATS.json
core/: CMakeLists.txt
core/src/: Framework.h  FrameworkTorch.h  NigelRewards.h  NigelStateSetters.h  SmoothnessCappedAction.h  TrainingBridge.cpp  TrainingBridge.h  main.cpp  nigel.rc
core/src/config/: ModelConfig.h  TrainConfig.h
core/src/engine/: PolicyVersionManager.cpp  PolicyVersionManager.h  Trainer.cpp  Trainer.h
core/src/ppo/: ExperienceBuffer.cpp  ExperienceBuffer.h  GAE.cpp  GAE.h  MagSGD.h  Models.cpp  Models.h  PPOLearner.cpp  PPOLearner.h
core/src/qml/: GPUPanel.qml  Main.qml  MetricsPanel.qml  MetricsTab.qml  MiniPlot.qml  OverviewTab.qml  PlotsTab.qml  RewardsTab.qml  SettingsTab.qml  Theme.qml  TopBar.qml
core/src/stats/: WelfordStat.h
core/src/util/: AvgTracker.h  GPUMonitor.cpp  GPUMonitor.h  RenderSender.cpp  RenderSender.h  Report.cpp  Report.h  Timer.h  Utils.cpp  Utils.h
